<resources>
    <string name="app_name">Vaccine Kit User</string>
    !-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="loginbutton">Login</string>

    <string name="appLogo">Vaccine Kit Logo</string>
    <string name="WordsRegister">Touch me to Register...</string>
    <string name="register">Register</string>

    <string name="VaccineKitMotto">Advancement of the Nation</string>
    <string name="vaccine_kit">Vaccine Kit</string>
    <string name="my_barcode">My Barcode</string>
    <string name="health_record">Health Record</string>
    <string name="lost_report">Lost Report</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>

    <string name="nik">NIK</string>
    <string name="name">Name</string>
    <string name="ttl">TTL</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="photo">Photo</string>
    <string name="selectionphoto">Selection Photo</string>
    <string name="firstvaccine">First Vaccine</string>
    <string name="secondVaccine">Second Vaccine</string>
    <string name="vaccineinfo">Vaccine Information</string>
    <string name="havevaccine">Vaccine at:</string>
    <string name="birth_date">Birth Date</string>
    <string name="Email">Email</string>
    <string name="gotbraclete">Got Your New Bracelet At our Closest Company or Partner</string>
    <string name="done">DONE</string>


</resources>