<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_user"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_lose_band"
            android:icon="@drawable/lost_report_icon"
            android:title="@string/lost_report" />

        <item
            android:id="@+id/nav_prof"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_logout_user"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>