<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".profile.ProfilActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/bloob"
            android:layout_width="264dp"
            android:layout_height="279dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/profile" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="800dp"
                    android:background="@drawable/background_white_solid_rectangle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/line"
                        android:layout_width="92dp"
                        android:layout_height="50dp"
                        android:background="@drawable/linehorizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="700dp"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/vaccineinfo"
                        android:textStyle="bold"
                        android:textSize="30sp"/>



                    <TextView
                        android:id="@+id/info1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Profile Data"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/name"
                        android:textSize="23sp"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:drawablePadding="8dp"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/tv_nik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/nik"
                        android:textSize="23sp"
                        android:drawableLeft="@drawable/niklogo"
                        android:drawablePadding="8dp"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/address"
                        android:textSize="23sp"
                        android:drawableLeft="@drawable/address"
                        android:drawablePadding="8dp"
                        android:padding="10dp"/>


                    <TextView
                        android:id="@+id/tv_ttl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:text="@string/birth_date"
                        android:textSize="23sp"
                        android:drawablePadding="8dp"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/birthdate"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vaccineinfo"
                        android:layout_marginBottom="15dp"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_firstVaccine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/firstvaccine"
                        android:textSize="23sp"
                        android:drawablePadding="8dp"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/firstverification"/>

                    <TextView
                        android:id="@+id/tv_secondVaccine"
                        android:layout_marginBottom="100dp"
                        android:text="@string/secondVaccine"
                        android:textSize="23sp"
                        android:drawablePadding="8dp"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:drawableLeft="@drawable/secondverification"/>



                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>