<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginUserActivity"
    android:background="#6360FF"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:contentDescription="@string/appLogo"
                    android:src="@drawable/vaccinekit4" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="350dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="444dp"
                        android:background="@drawable/background_white_solid_rectangle"
                        android:contentDescription="TODO" />
                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="60dp">

                            <EditText
                                android:id="@+id/user"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username"
                                android:inputType="textCapSentences"
                                android:maxLines="1"
                                android:background="@drawable/rounded_text"
                                android:autofillHints="@string/username"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <EditText
                                android:id="@+id/pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:autofillHints="@string/password"
                                android:inputType="textCapSentences"
                                android:maxLines="1"
                                android:background="@drawable/rounded_text"
                                />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/loginBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/loginbutton"/>


                        <Button
                            android:id="@+id/regTxtButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/WordsRegister"
                            android:textColor="#A1A1A1"
                            android:textSize="16sp"
                            android:textAllCaps="false"
                            style="?android:attr/borderlessButtonStyle"/>

                        <TextView
                            android:id="@+id/tvresNik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""/>
                        <TextView
                            android:id="@+id/tvresPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""/>

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

</ScrollView>